--- a/scss/core/_utilities.scss
+++ b/scss/core/_utilities.scss
@@ -6,7 +6,7 @@
 // *************************************
 
 // -------------------------------------
-// Clearfix
+// Micro utilities
 // -------------------------------------
 
 .u-cf {
@@ -21,17 +21,6 @@
 // Layout
 // -------------------------------------
 
-.u-layoutCell {
-  margin: 0 auto;
-  max-width: rem($l-maxWidth);
-  padding: 0 rem($l-gutter);
-}
-
-.u-layoutRow {
-  padding-top: rem($l-whitespace / 2);
-  padding-bottom: rem($l-whitespace / 2);
-}
-
 .u-layoutBlock {
   display: block;
 }
@@ -44,12 +33,11 @@
   @include outer-container;
 }
 
-.u-gridCol6 {
-  @include span-columns(6);
+.u-gridRow {
+  @include row();
+  padding-top    : rem($l-whiteSpace);
+  padding-bottom : rem($l-whiteSpace);
 }
-
-.u-grid {}
-// equal height
 
 // -------------------------------------
 // Text
