--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -41,26 +41,26 @@
 // ----- Contact bar ----- //
 
 .Header-contact {
-  @extend .u-layoutRow;
+  @extend .u-gridRow;
   background: rgba($c-black,0.5);
 }
 
 // ----- Contact bar ----- //
 
 .Header-logo {
-  @extend .u-layoutRow;
+  @extend .u-gridRow;
   background: rgba($c-black,0.25);
 }
 
 // ----- Nav bar ----- //
 
 .Header-nav {
-  @extend .u-layoutRow;
+  @extend .u-gridRow;
   background: $c-blue;
 }
 
 // ----- Carousel ----- //
 
 .Header-carousel {
-  @extend .u-layoutRow;
+  @extend .u-gridRow;
 }
