--- a/scss/modules/_navigation.scss
+++ b/scss/modules/_navigation.scss
@@ -41,7 +41,7 @@
 
 .Navigation-listItem {
   display: inline;
-  margin: 0 1em;
+  margin: 0 rem(15px);
   &:first-of-type {
     margin-left: 0;
   }
