--- a/scss/modules/_offer.scss
+++ b/scss/modules/_offer.scss
@@ -41,13 +41,17 @@
 // ----- Image ----- //
 
 .Offer-image {
-  @extend .u-gridCol6;
+  @include span-columns(6);
+  min-height: 400px;
+  background-image: url('../img/img-aanbieding.jpg');
+  background-size: cover;
 }
 
 // ----- Text ----- //
 
 .Offer-text {
-  @extend .u-gridCol6;
+  @include span-columns(6);
+  min-height: 400px;
   background: $c-blue;
 }
 
