--- a/scss/core/_settings.scss
+++ b/scss/core/_settings.scss
@@ -44,7 +44,7 @@ $c-blue  : #0070AF;
 $c-white : #EFEFEF;
 
 // ----- Layout ----- //
-$l-whiteSpace: rem(10px);
+$l-whiteSpace: 0.5rem;
 
 // Borders & Box-shadows
 $l-border         : 1px solid $c-black;
