Updated templates and styles

--- a/scss/core/_base.scss
+++ b/scss/core/_base.scss
@@ -31,27 +31,27 @@ h4, h5, h6 {
   font-weight: bold;
 }
 
-h1 {
+h1, %u-textH1 {
   font-size: rem(40px);
 }
 
-h2 {
+h2, %u-textH2 {
   font-size: rem(35px);
 }
 
-h3 {
+h3, %u-textH3 {
   font-size: rem(30px);
 }
 
-h4 {
+h4, %u-textH4 {
   font-size: rem(25px);
 }
 
-h5 {
+h5, %u-textH5 {
   font-size: rem(20px);
 }
 
-h6 {
+h6, %u-textH6 {
   font-size: rem(16px);
 }
 
