--- a/scss/core/_settings.scss
+++ b/scss/core/_settings.scss
@@ -45,6 +45,7 @@ $c-white : #EFEFEF;
 
 // ----- Layout ----- //
 $l-whiteSpace: 0.5rem;
+$l-insideGutter: 1rem;
 
 // Borders & Box-shadows
 $l-border         : 1px solid $c-black;
