--- a/scss/modules/_offer.scss
+++ b/scss/modules/_offer.scss
@@ -51,6 +51,8 @@
 
 .Offer-text {
   @include span-columns(6);
+  padding-left: $l-insideGutter;
+  padding-right: $l-insideGutter;
   min-height: 400px;
   background: $c-blue;
 }
@@ -67,5 +69,41 @@
 .Offer-subtitle {
   margin: 0;
   color: $c-white;
+  font-weight: bold;
+}
+
+// ----- Content ----- //
+
+.Offer-content {
+  color: shade($c-blue, 50%);
+  font-weight: bold;
+}
+
+// ----- Priceblock ----- //
+
+.Offer-priceBlock {
+  float: right;
+  text-align: right;
+}
+
+// ----- Old price ----- //
+
+.Offer-oldprice {
+  color: shade($c-blue, 50%);
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+// ----- Current price ----- //
+
+.Offer-currentprice {
+  @extend %u-textH1;
+  margin: 0;
+  color: $c-white;
+}
+
+// ----- Offer link ----- //
+
+.Offer-link {
   font-weight: bold;
 }
