--- a/scss/modules/_button.scss
+++ b/scss/modules/_button.scss
@@ -7,6 +7,7 @@
 
 .Button {
   display: inline-block;
+  font-weight: bold;
   padding: rem(10px) rem(5px);
   &:hover {
     text-decoration: none;
@@ -23,10 +24,14 @@
 // Modifiers
 // -------------------------------------
 
+// ----- Default ----- //
+
 .Button--default {
   color: $c-white;
   fill: $c-white;
 }
+
+// ----- Brand ----- //
 
 .Button--brand {
   color: $c-white;
