--- a/scss/global.scss
+++ b/scss/global.scss
@@ -41,21 +41,21 @@
 // Modules
 // -------------------------------------
 
-@import "modules/header";
-
-@import "modules/logo";
-
-@import "modules/icon";
+@import "modules/article";
 
 @import "modules/button";
 
-@import "modules/table";
+@import "modules/equalheight";
+
+@import "modules/header";
+
+@import "modules/icon";
+
+@import "modules/logo";
 
 @import "modules/navigation";
 
-@import "modules/offer";
-
-@import "modules/article";
+@import "modules/table";
 
 // -------------------------------------
 // Inbox
