Added module titles

--- a/scss/modules/_logo.scss
+++ b/scss/modules/_logo.scss
@@ -1,7 +1,7 @@
 // *************************************
 //
-// Module
-// -> Logo
+// Logo
+// -> Specific logo container
 //
 // *************************************
 
