--- a/scss/modules/_article.scss
+++ b/scss/modules/_article.scss
@@ -1,7 +1,7 @@
 // *************************************
 //
-// Module
-// -> This is an example module
+// Article
+// -> An article module
 //
 // *************************************
 
