--- a/scss/modules/_table.scss
+++ b/scss/modules/_table.scss
@@ -41,5 +41,5 @@
 // -------------------------------------
 
 .Table-heading {
-  padding-bottom: $l-whiteSpace;
+  padding-bottom: $l-insideGutter;
 }
