--- a/scss/core/_utilities.scss
+++ b/scss/core/_utilities.scss
@@ -29,6 +29,10 @@
   width: 100%;
 }
 
+.u-layoutExtraSpace {
+  margin-bottom: $l-whiteSpace;
+}
+
 // -------------------------------------
 // Grid
 // -------------------------------------
