--- a/scss/global.scss
+++ b/scss/global.scss
@@ -47,6 +47,8 @@
 
 @import "modules/equalheight";
 
+@import "modules/footer";
+
 @import "modules/header";
 
 @import "modules/icon";
@@ -60,3 +62,9 @@
 // -------------------------------------
 // Inbox
 // -------------------------------------
+ .u-col3 {
+  @include span-columns(3);
+  &:not(:first-of-type) {
+    padding: 0 rem(10px);
+  }
+ }
