--- a/scss/modules/_logo.scss
+++ b/scss/modules/_logo.scss
@@ -13,6 +13,10 @@
 // Modifiers
 // -------------------------------------
 
+.Logo-heading--footer {
+  margin: 0;
+}
+
 // -------------------------------------
 // States
 // -------------------------------------
