--- a/scss/global.scss
+++ b/scss/global.scss
@@ -59,12 +59,10 @@
 
 @import "modules/table";
 
+@import "modules/line";
+
+@import "modules/select";
+
 // -------------------------------------
 // Inbox
 // -------------------------------------
- .u-col3 {
-  @include span-columns(3);
-  &:not(:first-of-type) {
-    padding: 0 rem(10px);
-  }
- }
