--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -7,6 +7,7 @@
 
 .Footer {
   color: $c-white;
+  fill: $c-white;
   background: $c-blue;
 }
 
@@ -42,6 +43,7 @@
 
 .Footer-nav {
   @extend .u-gridContainer;
+  padding: rem(20px) 0;
 }
 
 // ----- Legal ----- //
@@ -59,7 +61,6 @@
 // ----- List ----- //
 
 .Footer-list {
-  text-transform: uppercase;
   font-size: rem(12px);
 }
 
@@ -67,4 +68,13 @@
 
 .Footer-link {
   color: $c-white;
+}
+
+// ----- Column ----- //
+
+.Footer-column {
+  @include span-columns(3);
+  &:not(:first-of-type) {
+    padding: 0 rem(10px);
+  }
 }
