--- a/scss/modules/_logo.scss
+++ b/scss/modules/_logo.scss
@@ -55,8 +55,9 @@
 
 .Logo-headingTop {
   font-family: 'Hobo', sans-serif;
-  font-size: rem(70px);
+  font-size: rem(60px);
   text-align: center;
+  text-transform: uppercase;
 }
 
 .Logo-headingBottom {
