--- a/scss/modules/_navigation.scss
+++ b/scss/modules/_navigation.scss
@@ -53,6 +53,8 @@
 // ----- Navigation link ----- //
 
 .Navigation-link {
+  @extend .Button;
+  @extend .Button--brand;
   color: $c-white; 
   text-transform: uppercase;
   font-weight: bold;
