--- a/scss/modules/_icon.scss
+++ b/scss/modules/_icon.scss
@@ -24,7 +24,10 @@
   padding-bottom: 0.2em;
 }
 
-.Icon--alone {}
+.Icon--alone {
+  height: 2rem;
+  width: 2rem;
+}
 
 // -------------------------------------
 // States
