--- a/scss/modules/_carousel.scss
+++ b/scss/modules/_carousel.scss
@@ -1,37 +1,25 @@
 // *************************************
 //
-// Table
-// -> A module for beating tables into
-//    submission
+// Carousel
+// -> A carousel module
+//
 // *************************************
 
-.Table {
-  text-transform: uppercase;
-
-  @include media(max-width $bp-logo) {
-    text-align: left;
-  }
-
-  @include media(max-width $bp-navCollapse) {
-    margin: 0 auto;
-    margin-bottom: 1rem;
-  }
+.Carousel {
+  @extend .u-gridContainer;
 }
 
 // -------------------------------------
 // Module specific variables
 // -------------------------------------
 
-// -variable
+$carousel-height: 25rem;
 
 // -------------------------------------
 // Modifiers
 // -------------------------------------
 
-.Table--invertedBold {
-  color: $c-white;
-  font-weight: bold;
-}
+// .Module--modifierName
 
 // -------------------------------------
 // States
@@ -49,6 +37,26 @@
 // Submodules
 // -------------------------------------
 
-.Table-heading {
-  padding-bottom: $l-insideGutter;
+.Carousel-imageColumn {
+  @include span-columns(6);
+  height: 0;
+  padding-top: $carousel-height;
+  position: relative;
+  overflow: hidden;
+}
+
+.Carousel-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.Carousel-textColumn {
+  @include span-columns(6);
+  padding-left: ( $l-insideGutter * 2 );
+  padding-right: ( $l-insideGutter * 2 );
+  background: $c-blue;
+  min-height: $carousel-height;
 }
