Added slider, custom post types and fields and some small tweaks

--- a/scss/core/_settings.scss
+++ b/scss/core/_settings.scss
@@ -62,6 +62,7 @@ $t-lineHeight       : 1.5;
 // ----- Breakpoints ----- //
 
 $bp-navCollapse: 1000px;
+$bp-carousel: 750px;
 $bp-logo: 400px;
 
 // ----- Z-indexes ----- //
