Updates to layout

--- a/scss/core/_settings.scss
+++ b/scss/core/_settings.scss
@@ -63,6 +63,7 @@ $t-lineHeight       : 1.5;
 
 $bp-navCollapse: 1000px;
 $bp-carousel: 750px;
+$bp-aanbieding: 500px;
 $bp-logo: 400px;
 
 // ----- Z-indexes ----- //
