Further updates to layout

--- a/scss/core/_base.scss
+++ b/scss/core/_base.scss
@@ -61,6 +61,10 @@ ul {
   margin: 0;
 }
 
+address {
+  font-style: normal;
+}
+
 // -------------------------------------
 // Inline Content
 // -------------------------------------
