--- a/scss/global.scss
+++ b/scss/global.scss
@@ -47,23 +47,29 @@
 
 @import "modules/carousel";
 
+@import "modules/content";
+
+@import "modules/form";
+
 @import "modules/footer";
 
 @import "modules/header";
 
 @import "modules/icon";
 
-@import "modules/logo";
-
-@import "modules/navigation";
-
-@import "modules/table";
-
 @import "modules/line";
 
 @import "modules/link";
 
+@import "modules/logo";
+
+@import "modules/map";
+
+@import "modules/navigation";
+
 @import "modules/select";
+
+@import "modules/table";
 
 // -------------------------------------
 // Inbox
