--- a/scss/modules/_article.scss
+++ b/scss/modules/_article.scss
@@ -42,6 +42,10 @@
 .Article--aanbieding {
   overflow: hidden;
 
+  .Article-heading {
+    color: $c-blue;
+  }
+
   .Article-imageWrap {
     @include span-columns(6);
     float: right;
@@ -61,7 +65,19 @@
       @include span-columns(12);
     }
   }
+}
 
+// ----- Tuin ----- //
+
+.Article--tuin {
+  
+  .Article-textColumn {
+    @include span-columns(9);
+  }
+
+  .Article-imageColumn {
+    @include span-columns(3);
+  }  
 }
 
 // -------------------------------------
@@ -84,7 +100,14 @@
 
 .Article-heading {
   text-transform: uppercase;
+  color: $c-blue;
   margin: 0;
+}
+
+.Article-subHeading {
+  text-transform: uppercase;
+  font-size: 1em;
+  color: $c-blue;
 }
 
 // ----- Subtitle ----- //
@@ -96,9 +119,11 @@
   text-transform: uppercase;
 }
 
-// ----- Content ----- //
+// ----- List ----- //
 
-.Article-content {
+.Article-list {
+  margin-left: 1em;
+  list-style-type: disc;
 }
 
 // ----- Details ----- //
