Updated layout some more

--- a/scss/core/_utilities.scss
+++ b/scss/core/_utilities.scss
@@ -48,6 +48,15 @@
 }
 
 // -------------------------------------
+// Link
+// -------------------------------------
+
+.u-linkBlack {
+  color: $c-black;
+  fill: $c-black;
+}
+
+// -------------------------------------
 // Text
 // -------------------------------------
 
