--- a/scss/modules/_content.scss
+++ b/scss/modules/_content.scss
@@ -61,11 +61,12 @@
   @include span-columns(7);
 }
 
-.Content-articles--half {
+.Content-articles--3of7 {
   @include span-columns(3 of 7);
   margin-bottom: 2rem;
 }
 
-.Content-articles--half:last-of-type {
-  @include shift(1);
+.Content-articles--4of7 {
+  @include span-columns(4 of 7);
+  margin-bottom: 2rem;
 }
