--- a/scss/global.scss
+++ b/scss/global.scss
@@ -84,3 +84,19 @@
     @extend .Button--brand;
   }
 }
+
+
+
+.textwidget {
+	color: white !important;
+	
+}
+
+.textwidget a {
+	color: white;
+	font-weight: bold;
+	color: white;
+	background-color: #006096;
+	padding: 10px;
+	
+}
